--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -548,6 +548,9 @@
     align-items: center;
     vertical-align: middle;
     text-align: center;
+    a.this {
+      color: #5EECFA;
+    }
     p {
       padding-left: 10px;
       padding-right: 10px;
