--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -2501,6 +2501,8 @@
 					right: 16px;
 					top: 16px;
 					height: auto;
+					max-width: 40%;
+					text-align: right;
 					&:before {
 						display: none;
 					}
