--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -159,6 +159,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  border: 1px solid #000000;
+  border-radius: 42px;
   p {
     font-size: 28px;
   }
@@ -173,6 +175,7 @@
 
   @include breakpoints.mobile() {
     height: 100vw;
+    border-radius: 24px;
     p {
       font-size: 14px;
     }
@@ -663,14 +666,15 @@
       align-items: center;
       justify-content: center;
       height: inherit;
-      border-radius: 68px;
+      // border-radius: 68px;
       overflow: hidden;
       img {
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 100%;
-        // height: 100%;
+        // width: 100%;
+        height: 100%;
+        border-radius: 68px;
         @include mixins.translate(-50%, -50%);
         object-fit: cover;
       }
@@ -687,6 +691,11 @@
     .swiper-container {
       .swiper-slide {
         padding-top: inherit;
+        img { 
+          width: 100%;
+          height: auto;
+          border-radius: 0;
+        }
       }
     }
   }
@@ -3324,4 +3333,7 @@
       }
     }
   }
+}
+.review__container .list__bottom .review_paging .btnMore {
+  border:1px solid #000000;
 }
