--- a/src/assets/css/search.scss
+++ b/src/assets/css/search.scss
@@ -41,3 +41,15 @@
 		}
 	}
 }
+
+#capp-shop-new-product-optionselect-backlayer {
+  display: none !important;
+}
+
+#capp-shop-new-product-optionselect-layer {
+  visibility: hidden;
+  -webkit-clip-path: inset(0 round 72px);
+  clip-path: inset(0 round 72px);
+  overflow: hidden;
+	background-color: #5EECFA !important;
+}
