--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -903,7 +903,7 @@
 		}
 	}
 	.menu__category--outer {
-		background-image: url('../images/bg_menu_category_outer.png');
+		background-image: url('../images/bg_menu_category_outer.jpg');
 		// background-position: 50% 7.81vw;
 		// background-size: 123.59vw auto;
 		background-position: center center;
@@ -911,7 +911,7 @@
 		background-color: #b3f977;
 	}
 	.menu__category--bottom {
-		background-image: url('../images/bg_menu_category_bottom.png');
+		background-image: url('../images/bg_menu_category_bottom.jpg');
 		// background-position: 50% -4.27vw;
 		// background-size: 48.18vw auto;
 		background-position: center center;
@@ -919,7 +919,7 @@
 		background-color: #5eecfa;
 	}
 	.menu__category--top {
-		background-image: url('../images/bg_menu_category_top.png');
+		background-image: url('../images/bg_menu_category_top.jpg');
 		// background-position: 50% 4.11vw;
 		// background-size: 88.49vw auto;
 		background-position: center center;
@@ -927,7 +927,7 @@
 		background-color: #fffd72;
 	}
 	.menu__category--acc {
-		background-image: url('../images/bg_menu_category_acc.png');
+		background-image: url('../images/bg_menu_category_acc.jpg');
 		// background-position: 50% 50%;
 		// background-size: 45.89vw auto;
 		background-position: center center;
