--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -271,11 +271,11 @@
 			&:hover {
 				.marquee {
 					display: block;
-					background-image: url('../images/bg_campaign.png');
-					background-position: 50% 50%;
+					background-image: none;
+					background-color: #5eecfa;
 					.marquee__loop {
 						.marquee__text {
-							color: #75fbd3;
+							color: #000000;
 						}
 					}
 				}
@@ -283,8 +283,11 @@
 
 			.marquee {
 				background-color: transparent;
+				background-image: url('../images/bg_campaign.jpg');
+				background-position: 50% 50%;
 				.marquee__loop {
 					.marquee__text {
+						color:#5eecfa;
 						span {
 							margin-left: 3px;
 							font-size: 20px;
@@ -973,7 +976,7 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-image: url('../images/funkplay/funkplay_btn_bg.png');
+			background-image: url('../images/funkplay/funkplay_btn_bg.jpg');
 			background-repeat: no-repeat;
 			background-size: cover;
 			background-position: center;
