--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -3681,10 +3681,10 @@
 	.xans-myshop-addrlist {
 		.myshop__article {
 			.myshop__roundbox {
-				padding-top: 0;
 				overflow-x: scroll;
 				-webkit-overflow-scrolling: touch;
 				.table-detail--address {
+					margin-top: -25px;
 					white-space: nowrap;
 				}
 			}
@@ -3713,4 +3713,5 @@
 		}
 	}
 }
+
 
