--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -206,6 +206,10 @@
 			.nav__link {
 				font-weight: 400;
 				font-size: 12px;
+				&:focus,
+				&:hover {
+					color: #5eecfa;
+				}
 			}
 		}
 		.nav__item {
@@ -285,6 +289,7 @@
 				background-color: transparent;
 				background-image: url('../images/bg_campaign.jpg');
 				background-position: 50% 50%;
+				background-size: cover;
 				.marquee__loop {
 					.marquee__text {
 						color:#5eecfa;
