--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -705,6 +705,7 @@
   top: 165px;
   right: 30px;
   bottom: inherit;
+  min-width: 360px;
   max-width: 360px;
   max-height: calc(100vh - 190px);
   padding: 38px 29px 30px;
@@ -823,6 +824,7 @@
   .product__accordion {
     max-height: 280px;
     overflow-y: auto;
+    padding-right: 13px;
   }
   .product__action {
     margin-top: 28px;
@@ -872,6 +874,7 @@
     position: relative;
     right: inherit;
     top: inherit;
+    min-width: auto;
     max-width: 750px;
     max-height: inherit;
     overflow: inherit;
@@ -2805,7 +2808,7 @@
         padding-bottom: 0 !important;
         &.right {
           float: none;
-          width: 100%;
+          // width: 100%;
           justify-content: flex-end;
           padding: 0 !important;
           margin-top: -20px;
