--- a/src/assets/css/_swiper-bundle.scss
+++ b/src/assets/css/_swiper-bundle.scss
@@ -635,7 +635,7 @@ button.swiper-pagination-bullet {
           backface-visibility: hidden;
   overflow: hidden;
   transition-property: transform, opacity, height;
-  margin-right: 2px;
+  // margin-right: 2px;
 }
 .swiper-cards {
   overflow: visible;
