--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -176,6 +176,8 @@
   @include breakpoints.mobile() {
     height: 100vw;
     border-radius: 24px;
+    margin-left: 15px;
+    margin-right: 15px;
     p {
       font-size: 14px;
     }
