--- a/src/assets/css/_menu.scss
+++ b/src/assets/css/_menu.scss
@@ -320,7 +320,7 @@
 			align-items: center;
 			width: 100%;
 			height: 142px;
-			border: 0;
+			border:1px solid #000000;
 			border-radius: 100vw;
 			background-color: #fff;
 			color: #000;
