--- a/src/assets/css/review_board.scss
+++ b/src/assets/css/review_board.scss
@@ -451,6 +451,7 @@
       .view {
         .text {
           font-size: 24px;
+          line-height: 1.2;
         }
         img {
           max-width: 100%;
