--- a/src/assets/css/addr_pop.scss
+++ b/src/assets/css/addr_pop.scss
@@ -127,6 +127,7 @@ input[type='radio'] {
 		& + label {
 			font-size: 12px;
 			letter-spacing: -0.012em;
+      margin-left: 5px;
 		}
 	}
 	input[type='radio'] {
@@ -604,8 +605,11 @@ input[type='radio'] {
           }
         }
         input[type=text] {
-          min-width: 25%;
-          width: 100%;
+          min-width: 30% !important;
+          width: 100% !important;
+        }
+        select {
+          width: 30% !important;
         }
       }
     }
