--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -2547,6 +2547,9 @@
       border-left: 0;
       border-radius: 52px;
       overflow: hidden;
+      &:first-of-type {
+        border-left: 1px solid #000000;
+      }
     }
     .marquee {
       height: 66px;
