--- a/src/assets/css/cart.scss
+++ b/src/assets/css/cart.scss
@@ -614,7 +614,7 @@ div.ec-base-help.ec-base-help_new {
   }
   .menu {
     .menu__list {
-      margin-left: 0;
+      margin-left: 1px;
     }
     .menu__swiper {
       ul {
@@ -623,16 +623,17 @@ div.ec-base-help.ec-base-help_new {
     }
     .menu__item {
       width: 25%;
-      margin-left: 0;
-      border-radius: 25px;
+      margin-left: -1px;
       overflow: hidden;
+
     }
     .menu__round {
       padding-top: 122.883%;
       clip-path: inset(0 round 25px);
       border: 1px solid #000000;
       border-left: 0;
-      border-radius: 30px;
+      border-radius: 25px;
+      overflow: hidden;
       &:first-of-type {
         border-left: 1px solid #000000;
       }
