--- a/src/assets/css/review_board.scss
+++ b/src/assets/css/review_board.scss
@@ -416,7 +416,7 @@
   .reviewLayer.typeRead {
     display: flex;
     width: 800px;
-    height: 100%;
+    height: 75vh;
     max-height: 900px;
     background: #ffffff;
     border: 1px solid #000;
@@ -636,6 +636,63 @@
   .review__list--cont {
     .rv__count {
       margin-right: 0;
+    }
+  }
+}
+
+.reviewArea {
+  .ec-base-button {
+    .ec-board-list-write-button {
+      border: 0;
+      padding: 0;
+    }
+  }
+}
+
+.review__container {
+  .reviewArea {
+    .searchArea {
+      margin-bottom: 30px;
+      .searchList {
+        padding: 30px;
+        border: 1px solid #000000;
+        background: #ffffff;
+        border-radius: 42px;
+        overflow: hidden;
+        table {
+          border: 0;
+          th, td {
+            border: 0;
+          }
+        }
+      }
+    }
+    @include breakpoints.mobile() {
+      .searchArea {
+        .searchList {
+          padding: 15px;
+          margin-top: 15px;
+          border-radius: 24px;;
+          td {
+            text-align: left !important;
+          }
+          span {
+            margin: 0;
+          }
+          label {
+            margin-top: 0;
+          }
+        }
+        .btnOpen {
+          display: inline;
+          position: relative;
+          top: inherit;
+          &:after {
+            top: 4px;
+            margin: 0;
+          }
+        }
+      }
     }
   }
 }
