--- a/src/assets/css/cart.scss
+++ b/src/assets/css/cart.scss
@@ -629,7 +629,7 @@ div.ec-base-help.ec-base-help_new {
     }
     .menu__round {
       padding-top: 122.883%;
-      clip-path: inset(0 round 25px);
+      clip-path: none;
       border: 1px solid #000000;
       border-left: 0;
       border-radius: 25px;
@@ -707,6 +707,7 @@ div.ec-base-help.ec-base-help_new {
         float: left;
         width: calc((100%/2.5) - 2px);
         margin-right: 2px;
+        margin-left: 0;
         border-radius: 15px;
         &:last-child {
           margin-right: 0;
