오픈 후 수정

--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -1097,6 +1097,9 @@
         border-color: #cccccc;
         color: #cccccc;
         pointer-events: none;
+        a {
+          color: #cccccc;
+        }
       }
     }
     &.ec-product-selected {
